# haotzar

./: .editorconfig  .gitignore  .prettierignore  FIX-OTZARIA.md  LICENSE  OTZARIA-PERFORMANCE-FIX.md  OTZARIA-QUICKSTART.md  OTZARIA-README.md  OTZARIA-TEXTVIEWER-INTEGRATION.md  QUICK-FIX-HE.txt  README.md  fix-sqlite.cmd  index.html  inspect-db.js  package-lock.json  package.json  run.cmd  test-otzaria.js  vite.config.js  מפת דרכים.txt  ראשי-תיבות.json
docs/: CI-BUILD-FIX.md  INDEX-MEMORY-USAGE-HE.md  INDEX-PERFORMANCE-OPTIMIZATION.md  INDEX-REBUILD-INSTRUCTIONS.md  INDEX-RECOVERY.md  OTZARIA-FILTER-EXTERNAL.md  OTZARIA-FIXES-SUMMARY.md  OTZARIA-INDEX-BUILD.md  OTZARIA-INTEGRATION.md  OTZARIA-NAVIGATION-FIX.md  OTZARIA-SEARCH-FIX.md  OUTLINE-TAB-FIX-SUMMARY.md  OUTLINE-VISIBILITY-FIX.md  PAGINATION-FIX.md  PDF-AUTO-OUTLINE.md  PERFORMANCE-TIPS.md  QUICK-SUMMARY-HE.md  SEARCH-HIGHLIGHTING-FIX.md  SEARCH-IMPROVEMENTS-HE.md  SEARCH-IMPROVEMENTS-SUMMARY.md  SMART-SEARCH.md  TAURI-ICONS-FIX-V2.md  TAURI-ICONS-FIX.md
electron/: main.js  preload.js
pdf-indexer/: .gitignore  PORTABLE-GUIDE.md  README.md  SUCCESS.md  UI-DEMO.md  build_index.py  checkpoint_manager.py  create_fully_portable.bat  create_portable.bat  create_standalone.bat  install.bat  requirements.txt  run_example.bat  run_ui.bat  web_ui.py
public/: abbr_merged.json  books-metadata.json
scripts/: README-OTZARIA.md  build-index-memory-optimized.js  build-index-optimized.js  build-otzaria-index.js  tools.js  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep  README.md  icon.icns
(+159 files in other folders)
